[package]
name = "dev-server"
version = "0.0.0"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dunce = "1.0.0"
log = "0.4.8"
simple_logger = "1.6.0"
structopt = { version = "0.3.11", optional = true }
lazy_static = "1.4.0"

[lib]

[[bin]]
name = "dev-server"
doc = false
required-features = ["default"]

[features]
default = ["structopt"]
